--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "frontendportafoliodaa"
+  },
+  "targets": {
+    "frontendportafoliodaa": {
+      "hosting": {
+        "ProyectoFinal_Avram_Debora": [
+          "frontendportafoliodaa"
+        ]
+      }
+    }
   }
 }
